--- a/frontend/asl4all/src/pages/training.module.css
+++ b/frontend/asl4all/src/pages/training.module.css
@@ -14,24 +14,26 @@
 }
 
 .textBox {
-    z-index: 10;
+    z-index: 750;
     position: fixed;
+    left: 0;
     bottom: 0;
 
-
-    margin: 2rem;
+    display: inline-block;
     padding: 1rem;
+    margin: 2rem;
 
     min-height: 25%; 
     max-height: 60%;
     width: calc(100% - 4rem);
 
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, calc(var(--opacity) / 100));
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(11.4px);
     -webkit-backdrop-filter: blur(11.4px);
     border: 1px solid rgba(0, 0, 0, 0.15);
+    box-sizing: border-box;
 
     user-select: none;
 }
@@ -46,7 +48,7 @@
 }
 
 .question {
-    z-index: 99;
+    z-index: 750;
     position: absolute;
     top: 0.75rem;
     left: 0.75rem;
@@ -58,11 +60,20 @@
 }
 
 .question > image {
-    z-index: 999;
+    z-index: 750;
     position: relative;
     display: block;
     width: 6rem;
     aspect-ratio: 15/18;
+}
+
+.textBox > svg {
+    z-index: 750;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    padding: 1rem;
 }
 
 .check {
@@ -72,4 +83,26 @@
     0% { background: rgba(0, 0, 0, 0.5); }
     50% { background: rgba(0, 255, 0, 0.5); }
     100% { background: rgba(0, 0, 0, 0.5); }
+}
+
+.cam {
+    z-index: 750;
+    position: fixed;
+    right: 2rem;
+    top: 2rem;
+
+    height: 4rem;
+    width: 4rem;
+
+    border-radius: 1rem;
+    background-color: rgba(0, 0, 0, 0.5);
+
+    transition: 0.5s;
+}
+
+.cam > svg {
+    width: calc(100% - 1rem);
+    height: calc(100% - 1rem);
+
+    padding: 0.5rem;
 }
